--- a/alist.css
+++ b/alist.css
@@ -1,5 +1,5 @@
 body{
-	background-image:url('http://api.hancat.work/cloud/api.php')
+	background-image:url('https://picsum.photos/1920/1080')
 	background-repeat:no-repeat;
 	background-size:cover;
 	background-attachment: fixed;
