--- a/alist.css
+++ b/alist.css
@@ -1,5 +1,5 @@
 body{
-	background-image:url('https://picsum.photos/1920/1080')
+	background-image:url('https://img.wjwj.top/2024/06/24/61de9263dc3e3b65ca36115bed27e2a4.png')
 	background-repeat:no-repeat;
 	background-size:cover;
 	background-attachment: fixed;
