--- a/alist.css
+++ b/alist.css
@@ -45,4 +45,92 @@ body{
 }
 .hope-c-PJLV-ijgzmFG-css{
     opacity: .8; !important
-    justify-content: cente
+    justify-content: center;
+    backdrop-filter: blur(5px);
+}
+.hope-c-PJLV-iigjoxS-css{
+    opacity: .7;
+    justify-content: center;
+    backdrop-filter: blur(5px);
+}
+.hope-c-PJLV-ikEIIxw-css{
+    opacity: .7;
+    justify-content: center;
+    backdrop-filter: blur(5px);
+}
+.hope-c-PJLV-iiuDLME-css{
+    opacity: .7;
+    justify-content: center;
+    backdrop-filter: blur(5px);
+}
+.hope-c-PJLV-ikSuVsl-css
+{
+    opacity: .7;
+    justify-content: center;
+    backdrop-filter: blur(5px);
+}
+
+    .hope-c-PJLV-ikaMhsQ-css{
+    --hope-colors-background: #ffffff00;}
+    .hope-c-PJLV-idaeksS-css{
+    opacity: .6;
+    backdrop-filter: blur(10px);
+    border-radius: 7px;
+    }
+.hope-c-PJLV-ifiEvmt-css{
+    opacity: .7;
+    backdrop-filter: blur(8px);
+}
+.hope-c-PJLV-iSMXDf-css{
+    opacity: .9;
+}
+.sw-Hennnyano {
+    width: 224px;
+    height: 224px;
+    position: fixed;
+    left: 0;
+    z-index: 100;
+    pointer-events: auto!important;
+    -webkit-transition: bottom 1.3s cubic-bezier(0,2.06,.56,.78);
+    transition: bottom 1.3s cubic-bezier(0,2.06,.56,.78);
+    bottom: -230px
+}
+@media print,screen and (max-width: 1024px) {
+    .sw-Hennnyano {
+        width:25.26042vw;
+        height: 25.26042vw;
+        bottom: -25.26042vw
+    }
+}
+
+.sw-Hennnyano.show {
+    bottom: -60px
+}
+@media print,screen and (max-width: 1024px) {
+    .sw-Hennnyano.show {
+        bottom:-6.25vw
+    }
+}
+
+.sw-Hennnyano .body {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background: url(https://cdn.jsdelivr.net/gh/TheSmallHanCat/Better_Alist@main/img/img_hennyano_body.png) left bottom/contain no-repeat
+}
+.sw-Hennnyano .eyes {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background: url(https://cdn.jsdelivr.net/gh/TheSmallHanCat/Better_Alist@main/img/img_hennyano_eyes.png) left bottom/contain no-repeat
+}
+
+@media(any-hover: hover) {
+    .sw-Hennnyano:hover {
+        cursor:pointer!important
+    }
+}
